Updated swagger config and removed extra dependency.

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -20,6 +20,7 @@ swagger:
   display:
     host: ${SWAGGER_DISPLAY_HOST}
     path: ${SWAGGER_DISPLAY_PATH}
+    scheme: ${SWAGGER_DISPLAY_SCHEME}
 
 management:
   endpoints:
