--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -40,3 +40,11 @@ management:
     health:
       enabled: true
       show-details: never
+
+#springdoc:
+#  version: '@springdoc.version@'
+#  api-docs:
+#    enabled: true
+#    path: /v3/api-docs
+#  swagger-ui:
+#    path: /swagger-ui.html
