split command take two

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,17 +13,17 @@ install: true
 script:
   - docker network create wdfn
   - |
-    docker
-    run
-    --rm
-    -v /var/run/docker.sock:/var/run/docker.sock
-    -v "$TRAVIS_BUILD_DIR":/usr/src/mymaven
-    -w /usr/src/mymaven
-    --network=wdfn
-    -e TESTING_DATABASE_PORT=5432
-    -e TESTING_DATABASE_ADDRESS=wdfnDatabase
-    -e TESTING_DATABASE_NETWORK=wdfn
-    maven:3.6.0-jdk-11 mvn clean verify
+    docker \
+    run \
+    --rm \
+    -v /var/run/docker.sock:/var/run/docker.sock \
+    -v "$TRAVIS_BUILD_DIR":/usr/src/mymaven \
+    -w /usr/src/mymaven \
+    --network=wdfn \
+    -e TESTING_DATABASE_PORT=5432 \
+    -e TESTING_DATABASE_ADDRESS=wdfnDatabase \
+    -e TESTING_DATABASE_NETWORK=wdfn \
+    maven:3.6.0-jdk-11 mvn clean verify \
   - docker network rm wdfn
 
 after_success:
