IOW-198 - new id of agency_cd/site_no

--- a/pom.xml
+++ b/pom.xml
@@ -191,7 +191,7 @@
                     </execution>
                 </executions>
                 <configuration>
-                    <showLogs>true</showLogs>
+<!--                     <showLogs>true</showLogs> -->
                     <containerNamePattern>%a</containerNamePattern>
                     <images>
                         <image>
