--- a/codecov.yml
+++ b/codecov.yml
@@ -1,2 +1,6 @@
 ignore:
+# Classes used exclusively in defining the openapi
   - "**/geojson"
+  - "**/Version.java"
+# Spring Boot Application file - no testable logic
+  - "**/Application.java"
