--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -35,3 +35,8 @@ management:
     health:
       enabled: true
       show-details: never
+
+collections:
+  monitoring-locations:
+    title: NWIS Monitoring Locations
+    description: USGS water monitoring locations managed in the National Water Information System
