--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -36,3 +36,8 @@ management:
     health:
       enabled: true
       show-details: never
+
+collections:
+  monitoring-locations:
+    title: NWIS Monitoring Locations
+    description: USGS water monitoring locations managed in the National Water Information System
