--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -40,3 +40,7 @@ collections:
   monitoring-locations:
     title: NWIS Monitoring Locations
     description: USGS water monitoring locations managed in the National Water Information System
+
+query:
+  limit:
+    max: 10000
