--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -41,3 +41,7 @@ collections:
   monitoring-locations:
     title: NWIS Monitoring Locations
     description: USGS water monitoring locations managed in the National Water Information System
+
+query:
+  limit:
+    max: 100
