--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -40,3 +40,5 @@ collections:
   monitoring-locations:
     title: NWIS Monitoring Locations
     description: USGS water monitoring locations managed in the National Water Information System
+    contactName: ${MONLOC_CONTACT_NAME:Internet of Water Product Owners}
+    contactEmail: ${MONLOC_CONTACT_EMAIL:GS-W-iow_product_owners@usgs.gov}
