--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -41,3 +41,5 @@ collections:
   monitoring-locations:
     title: NWIS Monitoring Locations
     description: USGS water monitoring locations managed in the National Water Information System
+    contactName: ${MONLOC_CONTACT_NAME:""}
+    contactEmail: ${MONLOC_CONTACT_EMAIL:""}
