IOW-366 (Support 400, 404, and 500 by OGC guidance)    initial commit.

--- a/codecov.yml
+++ b/codecov.yml
@@ -1,6 +1,7 @@
 ignore:
 # Classes used exclusively in defining the openapi
   - "**/geojson"
+  - "**/observations"
   - "**/Version.java"
 # Spring Boot Application file - no testable logic
   - "**/Application.java"
