IOW-366 (Support 400, 404, and 500 by OGC guidance)   Swagger document updates:     Made the bbox parameter in endpoint a String     Updated BBox validator to take the Bounding Box single string value as       argument.     Restored ANC collection link to featureCollection_bbox_one.json     Added @parameter to add a description for bbox parameter in swagger ui     Moved openapi class to openapi.schema package

--- a/codecov.yml
+++ b/codecov.yml
@@ -1,7 +1,6 @@
 ignore:
 # Classes used exclusively in defining the openapi
-  - "**/geojson"
-  - "**/observations"
+  - "**/schema"
   - "**/Version.java"
 # Spring Boot Application file - no testable logic
   - "**/Application.java"
