--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -42,3 +42,6 @@ collections:
     description: USGS water monitoring locations managed in the National Water Information System
     contactName: ${MONLOC_CONTACT_NAME:Internet of Water Product Owners}
     contactEmail: ${MONLOC_CONTACT_EMAIL:GS-W-iow_product_owners@usgs.gov}
+
+swagger:
+  apiDocsUrl: ${SERVER_CONTEXT_PATH}/v3/api-docs
