--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -16,7 +16,7 @@ logging:
 
 site:
   url:
-    base: ${SITE_URL_BASE:/}
+    base: https://unittest/api/observations/
 
 management:
   endpoints:
@@ -43,3 +43,6 @@ collections:
     description: USGS water monitoring locations managed in the National Water Information System
     contactName: Internet of Water Product Owners
     contactEmail: GS-W-iow_product_owners@usgs.gov
+
+swagger:
+  apiDocsUrl: /v3/api-docs
