first swipe at adding tags via the new ecs deploy pipeline tagging approach

--- a/pipeline.yml
+++ b/pipeline.yml
@@ -20,3 +20,10 @@ urlRules:
     conditions:
       - "/api/observations/*"
     priority: 309
+tags:
+# wma:applicationId, wma:environment, and Name come for free via the ecs deployment pipeline
+  - wma:costCenter: "TBD"
+    wma:organization: "iow"
+    wma:contact: "TBD"
+    wma:taggingVersion: "0.0.1"
+    wma:project_id: "iow"
