Actually, just do the key value pairs

--- a/pipeline.yml
+++ b/pipeline.yml
@@ -22,8 +22,8 @@ urlRules:
     priority: 309
 tags:
 # wma:applicationId, wma:environment, and Name come for free via the ecs deployment pipeline
-  - wma:costCenter: "TBD"
-    wma:organization: "iow"
-    wma:contact: "TBD"
-    wma:taggingVersion: "0.0.1"
-    wma:project_id: "iow"
+  wma:costCenter: "TBD"
+  wma:organization: "iow"
+  wma:contact: "TBD"
+  wma:taggingVersion: "0.0.1"
+  wma:project_id: "iow"
