tag update - consolidate uppercase convention for wma:organization tag

--- a/pipeline.yml
+++ b/pipeline.yml
@@ -23,7 +23,7 @@ urlRules:
 tags:
 # wma:applicationId, wma:environment, and Name come for free via the ecs deployment pipeline
   wma:costCenter: "TBD"
-  wma:organization: "iow"
+  wma:organization: "IOW"
   wma:contact: "TBD"
   wma:taggingVersion: "0.0.1"
   wma:project_id: "iow"
