--- a/pipeline.yml
+++ b/pipeline.yml
@@ -24,6 +24,6 @@ tags:
 # wma:applicationId, wma:environment, and Name come for free via the ecs deployment pipeline
   wma:costCenter: "TBD"
   wma:organization: "IOW"
-  wma:contact: "TBD"
+  wma:contact: "jkreft@usgs.gov"
   wma:taggingVersion: "0.0.1"
   wma:project_id: "iow"
