--- a/pom.xml
+++ b/pom.xml
@@ -192,7 +192,8 @@
                         <WDFN_DATABASE_ADDRESS>${TESTING_DATABASE_ADDRESS}</WDFN_DATABASE_ADDRESS>
                         <WDFN_DATABASE_PORT>${TESTING_DATABASE_PORT}</WDFN_DATABASE_PORT>
                         <WDFN_DATABASE_NAME>wqp_db</WDFN_DATABASE_NAME>
-                        <WDFN_DB_READ_ONLY_USERNAME>wdfn_user</WDFN_DB_READ_ONLY_USERNAME>
+                        <!-- Read only user should be: 'wdfn_user', temporary fix until docker db is updated -->
+                        <WDFN_DB_READ_ONLY_USERNAME>postgres</WDFN_DB_READ_ONLY_USERNAME>
                         <WDFN_DB_READ_ONLY_PASSWORD>changeMe</WDFN_DB_READ_ONLY_PASSWORD>
                         <WDFN_SCHEMA_OWNER_USERNAME>nwis_ws_star</WDFN_SCHEMA_OWNER_USERNAME>
                         <WDFN_SCHEMA_OWNER_PASSWORD>changeMe</WDFN_SCHEMA_OWNER_PASSWORD>
